# FrankaEmikaPanda

./: .gitignore
.cache/clangd/index/: object_avoidance.cpp.2F9BE0292DF25217.idx  object_creation.cpp.335C0CCE428D1E73.idx  panda_control.cpp.C9731A05DF9D3A85.idx  pick_and_place.cpp.A7DA80669377FDB8.idx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: timesync.txt
src/moveit_control/src/: hello_moveit.cpp
src/panda_arm_config/: .setup_assistant  package.xml
src/panda_arm_config/config/: kinematics.yaml  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  ros2_controllers.yaml
src/panda_control/: CMakeLists.txt  package.xml
src/panda_control/src/: object_avoidance.cpp  object_creation.cpp  panda_control.cpp
src/panda_description/config/: my_controllers.yaml
src/panda_description/launch/: gazebo_headless.launch.py
src/panda_description/urdf/: panda_desc.urdf.xacro  ros2_control.xacro  test.py
src/panda_hand_config/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_hand_config/config/: kinematics.yaml  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  ros2_controllers.yaml
src/panda_hand_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  (+2 more)
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_test_mvt/: .setup_assistant  CMakeLists.txt  package.xml
src/pick_and_place/: CMakeLists.txt  package.xml
src/test_1_config/: .setup_assistant  CMakeLists.txt  package.xml
(+55 files in other folders)
